--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -32,7 +32,7 @@
 
         <div class="grid-col-2">
             <div class="section bg-grey" id="target">
-                <h2 class="section-title">Mục tiêu nghề nghiệp</h2>
+                <p class="section-title">Mục tiêu nghề nghiệp</p>
                 <div class="section-content">
                     Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ
                     đi
@@ -42,7 +42,7 @@
             </div>
 
             <div class="section bg-light-grey" id="info">
-                <h2 class="section-title">Nguyễn Văn Vượng</h2>
+                <p class="section-title">Thông tin cá nhân</p>
                 <div class="info-content">
                     <!--                    -->
                     <div class="label">Ngày sinh</div>
@@ -61,14 +61,14 @@
             </div>
         </div>
 
-        <div class="grid-col-3 max-width-80">
+        <div class="grid-col-3 max-width-66">
             <div class="section">
                 <div class="section-title">
                     <span>Kinh nghiệm</span>
                     <i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="exp-item">
                         <span class="item-title">Full Stack Developer - Công ty Y</span> <br>
                         <span class="time-range">05/2022 - <span class="now">Hiện tại</span></span>
@@ -81,7 +81,7 @@
                         </ul>
                     </div>
 
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="exp-item">
                         <span class="item-title">Web Designer - Công ty X</span> <br>
                         <span class="time-range">06/2021 - 04/2022</span>
@@ -99,7 +99,7 @@
                     <i class="fa-solid fa-pen"></i>
                 </div>
                 <div class="section-content-1">
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="edu-item">
                         <span class="item-title">FUNix</span> <br>
                         <span class="time-range">06/2021 - 05/2022</span> <br>
@@ -109,7 +109,7 @@
                         </ul>
                     </div>
 
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="edu-item">
                         <span class="item-title">Cử nhân-ĐH FPT</span> <br>
                         <span class="time-range">08/2016 - 07/2019</span> <br>
@@ -128,7 +128,7 @@
                     <span>Hoạt động</span><i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="act-item">
                         <span class="item-title">FPT Edu Hackathon 2019</span><br>
                         <span class="time-range">03/2019 - 05/2019</span><br>
@@ -138,7 +138,7 @@
                         </ul>
                     </div>
 
-                    <div>Icon</div>
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="activity-item">
                         <span class="item-title">Câu lạc bộ Z</span><br>
                         <span class="time-range">08/2016 - 08/2017</span>br
