--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -22,7 +22,7 @@
     <div id="nav-bar">
         <div class="nav-bar-item"><i class="fa-solid fa-user cl-blue-icon"></i>Thông tin</div>
         <div class="nav-bar-item"><i class="fa-solid fa-file-lines cl-blue-icon"></i>Lý Lịch</div>
-        <div class="avatar"><img src="images/default-avatar.webp" alt="avatar" srcset=""></div>
+        <div class="avatar"><img src="images/default-avatar.png" alt="avatar" srcset=""></div>
         <div class="nav-bar-item"><i class="fa-solid fa-envelope cl-blue-icon"></i>Chứng chỉ
         </div>
         <div class="nav-bar-item"><i class="fa-solid fa-star cl-blue-icon"></i>Dự án
@@ -68,10 +68,11 @@
                     <i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
+
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="exp-item">
                         <span class="item-title">Full Stack Developer - Công ty Y</span> <br>
-                        <span class="time-range">05/2022 - <span class="now">Hiện tại</span></span>
+                        <span class="time-range">09/2023 - <span class="now">Hiện tại</span></span>
                         <ul>
                             <li>Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.</li>
                             <li>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, NoSQL,
@@ -83,11 +84,27 @@
 
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="exp-item">
-                        <span class="item-title">Web Designer - Công ty X</span> <br>
-                        <span class="time-range">06/2021 - 04/2022</span>
+                        <span class="item-title">Java Web Developer - Công ty ETC</span> <br>
+                        <span class="time-range">8/2022 - 08/2023</span>
                         <ul>
-                            <li>Thiết kế Website dựa trên yêu cầu của khách hàng.</li>
-                            <li>Sử dụng các công cụ: Figma, Canva, PTS.</li>
+                            <li>Tham gia xây dựng website hệ thống Đăng ký xe (C08), quản lý tài sản (C03), Evisa (A08)</li>
+                            <li>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL Oracle và viết được các câu truy vấn, Store procedure.</li>
+                            <li>Xây dựng template để đổ thông tin vào in các tài liệu, giấy chứng nhận theo mẫu sử dụng</li>
+                            <li>Gửi email thông báo đến người dùng</li>
+                            <li>Validate, CRUD các bảng trong CSDL </li>
+                            <li>Tech stack: Spring Boot, Hibernate, Oracle, MinIO, Go text template, Flyway</li>
+                        </ul>
+                    </div>
+
+                    <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
+                    <div class="exp-item">
+                        <span class="item-title">Java Web Developer - Công ty One Mount</span> <br>
+                        <span class="time-range">10/2021 - 05/2022</span>
+                        <ul>
+                            <li>Tham gia xây dựng website backoffice cho Admin quản lý thông tin của nhân viên, cộng tác viên, khách hàng, tài sản nhà đất, BĐS,...</li>
+                            <li>Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL MySql và viết được các câu truy vấn.</li>
+                            <li>Sử dụng các công cụ: Jira, Confluence.</li>
+                            <li>Tech stack: Spring Boot, Hibernate, MySql, Flyway</li>
                         </ul>
                     </div>
                 </div>
@@ -101,7 +118,7 @@
                 <div class="section-content-1">
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="edu-item">
-                        <span class="item-title">FUNix</span> <br>
+                        <span class="item-title">FUNIX</span> <br>
                         <span class="time-range">06/2021 - 05/2022</span> <br>
                         <ul>
                             <li>Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack.</li>
@@ -112,11 +129,10 @@
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="edu-item">
                         <span class="item-title">Cử nhân-ĐH FPT</span> <br>
-                        <span class="time-range">08/2016 - 07/2019</span> <br>
+                        <span class="time-range">08/2014 - 07/2019</span> <br>
                         <ul>
-                            <li>Chuyên ngành: Kỹ thuật phần mềm.</li>
-                            <li>GPA: 3.2 / 4</li>
-                            <li></li>
+                            <li>Chuyên ngành: Kỹ sư phần mềm.</li>
+                            <li>GPA: 2.5 / 4</li>
                         </ul>
                     </div>
                 </div>
@@ -128,22 +144,26 @@
                     <span>Hoạt động</span><i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="section-content-1">
+
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
-                    <div class="act-item">
-                        <span class="item-title">FPT Edu Hackathon 2019</span><br>
-                        <span class="time-range">03/2019 - 05/2019</span><br>
+                    <div class="activity-item">
+                        <span class="item-title">Câu lạc bộ Sách</span> <br>
+                        <span class="time-range">08/2014 - 08/2017</span> <br>
                         <ul>
-                            <li>Giải 3 bảng A</li>
-                            <li>Đề tài: Trang web về phân loại rác thải.</li>
+                            <li>Thành viên ban nội dung.</li>
+                            <li>Thành viên ban đội bóng CLB, dành HC bạc trong giải các CLB của trường. Là CLB duy nhất được mời tham gia giải bóng đá kì niệm 15 năm khối giáo dục của FPT</li>
+                            <li>Tham gia viết bài cho fanpage của CLB</li>
                         </ul>
                     </div>
 
                     <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                     <div class="activity-item">
-                        <span class="item-title">Câu lạc bộ Z</span><br>
-                        <span class="time-range">08/2016 - 08/2017</span>br
+                        <span class="item-title">Câu lạc bộ Debate</span><br>
+                        <span class="time-range">08/2014 - 08/2017</span><br>
                         <ul>
-                            <li>Trưởng ban chuyên môn.</li>
+                            <li>Thành viên CLB debate.</li>
+                            <li>Tổ chức và tham dự giải đấu debate giữa các trường khu vực HN</li>
+                            <li>Thành viên ban đội bóng CLB</li>
                         </ul>
                     </div>
                 </div>
@@ -168,13 +188,7 @@
                 <div class="section-title">Ngôn ngữ</div>
                 <div class="language pd-10">
                     <div class="language-item">
-                        <span>Tiếng Anh - IELTS 7.0</span><br>
-                        <span class="blue-line"></span>
-                        <span class="blue-line"></span>
-                        <span class="grey-line"></span>
-                    </div>
-                    <div class="language-item">
-                        <span>Tiếng Nhật - N4</span><br>
+                        <span>Tiếng Anh - IELTS 5.0</span><br>
                         <span class="blue-line"></span>
                         <span class="grey-line"></span>
                         <span class="grey-line"></span>
@@ -192,21 +206,27 @@
                         <span class="grey-line"></span>
                     </div>
                     <div class="language-item">
-                        <span>Javascript: Intermediate</span><br>
+                        <span>Spring Boot: Intermediate</span><br>
                         <span class="blue-line"></span>
                         <span class="blue-line"></span>
                         <span class="grey-line"></span>
                     </div>
                     <div class="language-item">
-                        <span>NodeJS: Intermediate</span><br>
+                        <span>Oralce: Intermediate</span><br>
                         <span class="blue-line"></span>
                         <span class="blue-line"></span>
                         <span class="grey-line"></span>
                     </div>
                     <div class="language-item">
-                        <span>Bootstrap 5: Fundamental </span><br>
+                        <span>MySQL: Intermediate </span><br>
+                        <span class="blue-line"></span>
                         <span class="blue-line"></span>
                         <span class="grey-line"></span>
+                    </div>
+                    <div class="language-item">
+                        <span>Data structure & Algorithms: Intermediate </span><br>
+                        <span class="blue-line"></span>
+                        <span class="blue-line"></span>
                         <span class="grey-line"></span>
                     </div>
                 </div>
