--- a/Lab 11/survey.html
+++ b/Lab 11/survey.html
@@ -14,30 +14,30 @@
 <body class="bg-img">
 <div class="content">
     <header class="py-2">
-        <div class="container grid grid-1 center">
+        <div class="container block ">
             <h1 id="title" class="my-2">freeCodeCamp Survey Form</h1>
             <p id="description">Thank you for taking the time to help us improve the platform</p>
         </div>
     </header>
     <div class="section-form">
-        <form action="" id="survey-form" class="grid grid-1 center my-2">
-            <div class="form-group grid grid-1 center">
-                <label for="name" id="name-label" class="">Name</label>
+        <form action="" id="survey-form" class="block  my-2">
+            <div class="form-group block ">
+                <label for="name" id="name-label" class="my-1">Name</label>
                 <input type="text" name="name" id="name" placeholder="Enter your name" required class="input-text p-1">
             </div>
-            <div class="form-group grid grid-1 center">
-                <label for="email" id="email-label" class="">Email</label>
+            <div class="form-group block ">
+                <label for="email" id="email-label" class="my-1">Email</label>
                 <input type="email" name="email" id="email" placeholder="Enter your email" required
                        class="input-text p-1">
             </div>
-            <div class="form-group grid grid-1 center">
-                <label for="number" id="number-label" class="">Age</label>
+            <div class="form-group block ">
+                <label for="number" id="number-label" class="my-1">Age</label>
                 <input type="number" name="number" id="number" placeholder="Age" min="00" max="100"
                        class="input-text p-1">
             </div>
-            <div class="form-group grid grid-1 center">
-                <label for="dropdown" class="">Which option best describes your current role</label>
-                <select name="dropdown" id="dropdown" class="input p-1">
+            <div class="form-group block ">
+                <label for="dropdown" class="my-1">Which option best describes your current role</label>
+                <select name="dropdown" id="dropdown" class="input my-1 p-1">
                     <option value="">Select an option--</option>
                     <option value="cat">Challenges</option>
                     <option value="cat">Projects</option>
@@ -45,73 +45,73 @@
                     <option value="cat">Open Source</option>
                 </select>
             </div>
-            <div class="form-group grid grid-1 center">
-                <p>Would you recommend freeCodeCamp to a friend?</p>
-                <div class="radio-btn-form">
+            <div class="form-group block ">
+                <p class="my-1">Would you recommend freeCodeCamp to a friend?</p>
+                <div class="radio-btn-form my-1">
                     <input type="radio" id="definitely" name="recommend" value="HTML">
                     <label for="definitely">Definitely</label><br>
                 </div>
-                <div class="radio-btn-form">
+                <div class="radio-btn-form my-1">
                     <input type="radio" id="maybe" name="recommend" value="CSS">
                     <label for="maybe">Maybe</label><br>
                 </div>
-                <div class="radio-btn-form">
+                <div class="radio-btn-form my-1">
                     <input type="radio" id="note-sure" name="recommend" value="JavaScript">
                     <label for="note-sure">Not Sure</label>
                 </div>
             </div>
-            <div class="form-group grid grid-1 center">
-                <p>What would you like to see improved? <span class="clue">(Check all that apply)</span></p>
-                <div class="check-box-form">
+            <div class="form-group block ">
+                <p class="my-1">What would you like to see improved? <span class="clue">(Check all that apply)</span></p>
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="front-end-projects" name="field" value="front-end-projects"/>
                     <label for="front-end-projects">Front-end Projects</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="back-end-projects" name="field" value="back-end-projects"/>
                     <label for="back-end-projects">Back-end Projects</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="data-visualization" name="field" value="data-visualization"/>
                     <label for="data-visualization">Data Visualization</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="challenges" name="field" value="challenges"/>
                     <label for="challenges">Challenges</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="open-source-community" name="field" value="open-source-community"/>
                     <label for="open-source-community">Open Source Community</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="gitter-help-rooms" name="field" value="gitter-help-rooms"/>
                     <label for="gitter-help-rooms">Gitter help rooms</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="videos" name="field" value="videos"/>
                     <label for="videos">Videos</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="city-meetups" name="field" value="city-meetups"/>
                     <label for="city-meetups">City Meetups</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="wiki" name="field" value="wiki"/>
                     <label for="wiki">Wiki</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="forum" name="field" value="forum"/>
                     <label for="forum">Forum</label>
                 </div>
-                <div class="check-box-form">
+                <div class="check-box-form my-1">
                     <input type="checkbox" id="additional-courses" name="field" value="additional-courses"/>
                     <label for="additional-courses">Additional Courses</label>
                 </div>
             </div>
-            <div class="form-group grid grid-1 center">
-                <label for="suggestion" class="">Any comments or suggestions?</label>
+            <div class="form-group block ">
+                <label for="suggestion" class="my-1">Any comments or suggestions?</label>
                 <textarea id="suggestion" placeholder="Enter your comments here" class="input p-1"></textarea>
             </div>
-            <div class="form-group grid grid-1 center">
+            <div class="form-group block my-3">
                 <button type="submit" id=submit>Submit</button>
             </div>
         </form>
