Ass 3: add feature view more btn

--- a/Assignment 03/index.html
+++ b/Assignment 03/index.html
@@ -87,7 +87,7 @@
                             <i class="col-3 fa-solid fa-briefcase section-icon"></i>
                         </div>
                     </div>
-                    <div class="section-content">
+                    <div class="section-content grid-col-40px">
 
                         <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                         <div class="exp-item">
@@ -137,7 +137,7 @@
                             <i class="col-3 fa-solid fa-pen section-icon"></i>
                         </div>
                     </div>
-                    <div class="section-content">
+                    <div class="section-content grid-col-40px">
                         <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                         <div class="edu-item">
                             <span class="item-title">FUNIX</span> <br>
@@ -170,7 +170,7 @@
                             <i class="col-3 fa-solid fa-briefcase section-icon"></i>
                         </div>
                     </div>
-                    <div class="section-content">
+                    <div class="section-content grid-col-40px">
 
                         <div><i class="fa-solid fa-circle cl-blue-icon"></i></div>
                         <div class="activity-item">
@@ -203,7 +203,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="section">
                     <div class="section-title ps-4">Sở thích</div>
-                    <div class=" container">
+                    <div class="section-content container">
                         <div class="row">
                             <div class="col-6 col-sm-3">
                                 <div class="icon-container">
@@ -246,7 +246,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="section">
                     <div class="section-title ps-4">Ngôn ngữ</div>
-                    <div class=" language ps-4">
+                    <div class="section-content language ps-4">
                         <div class="language-item">
                             <span>Tiếng Anh - IELTS 5.0</span><br>
                             <span class="blue-line"></span>
@@ -261,7 +261,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="section">
                     <div class="section-title ps-4">Kỹ năng</div>
-                    <div class=" language ps-4">
+                    <div class="section-content language ps-4">
                         <div class="language-item">
                             <span>HTML/CSS: Fundamental</span><br>
                             <span class="blue-line"></span>
