--- a/Assignment 03/index.html
+++ b/Assignment 03/index.html
@@ -360,7 +360,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="pro-img"><img src="images/project_1.png" alt="project1"></div>
-                        <div class="pro-title flex-row">cv cá nhân</div>
+                        <a href="./project.html"><div class="pro-title flex-row">cv cá nhân</div></a>
                         <div class="pro-role flex-row">
                             <div class="pro-time">2021</div>
                             <div class="pro-org">Funix</div>
@@ -387,7 +387,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="pro-img"><img src="images/project_2.png" alt="project2"></div>
-                        <div class="pro-title flex-row">Trang web quản lý thú cưng</div>
+                        <a href="./project.html"><div class="pro-title flex-row">Trang web quản lý thú cưng</div></a>
                         <div class="pro-role flex-row">
                             <div class="pro-time">2021</div>
                             <div class="pro-org">Funix</div>
@@ -415,7 +415,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="pro-img"><img src="images/project_3.png" alt="project3"></div>
-                        <div class="pro-title flex-row">cv cá nhân</div>
+                        <a href="./project.html"><div class="pro-title flex-row">cv cá nhân</div></a>
                         <div class="pro-role flex-row">
                             <div class="pro-time">2021</div>
                             <div class="pro-org">Funix</div>
