update project.html Timeline

--- a/Assignment 03/project.html
+++ b/Assignment 03/project.html
@@ -144,22 +144,57 @@
         </div>
 
         <div class="col-md-12 col-lg-3">
-            <div class="container">
+            <div class="container mb-4">
                 <h2 class="text-primary">Timeline</h2>
-                <ul class="list-group">
-                    <li class="list-group-item">
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
                         <span class="badge bg-secondary">01</span> Project Start
                         <p>Lorem ipsum dolor sit amet.</p>
-                    </li>
-                    <li class="list-group-item">
-                        <span class="badge bg-secondary">02</span> Project Date
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">02</span> Project Start
                         <p>Lorem ipsum dolor sit amet.</p>
-                    </li>
-                    <li class="list-group-item">
-                        <span class="badge bg-secondary">03</span> Project Date
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">03</span> Project Start
                         <p>Lorem ipsum dolor sit amet.</p>
-                    </li>
-                </ul>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">04</span> Project Start
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">05</span> Project Start
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">06</span> Project Start
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">07</span> Project Start
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <span class="badge bg-secondary">08</span> Project Start
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
 
