--- a/Assignment 03/project.html
+++ b/Assignment 03/project.html
@@ -22,7 +22,8 @@
 
 <div class="container my-4 bg-blue">
     <div class="row">
-        <div class="col-md-12 col-lg-6">
+        <!--Goals -->
+        <div class="col-12 col-lg-6">
             <div class="container mb-4">
                 <h2 class="text-primary">Goals</h2>
                 <div class="d-flex border-bottom border-top">
@@ -56,24 +57,10 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <h2 class="text-primary">Scopes</h2>
-                <div class="row">
-                    <div class="col-6 border-bottom border-top">
-                        <h5 class="fw-bold pt-2">IN</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit.</p>
-                    </div>
-                    <div class="col-6 border-bottom border-top">
-                        <h5 class="fw-bold pt-2">OUT</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-            </div>
         </div>
 
-        <div class="col-md-12 col-lg-3">
+        <!--Team-->
+        <div class="col-12 col-lg-3">
             <div class="container mb-4">
                 <h2 class="text-primary">Team</h2>
                 <div class="d-flex border-top">
@@ -122,28 +109,10 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <h2 class="text-primary">Primary</h2>
-                <div class="d-flex border-top">
-                    <div class="col-lg-2 align-content-center text-center ">
-                        <i class="bi-question-circle-fill"></i>
-                    </div>
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="d-flex">
-                    <div class="col-lg-2 align-content-center text-center ">
-                        <i class="bi-question-circle-fill"></i>
-                    </div>
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-            </div>
         </div>
 
-        <div class="col-md-12 col-lg-3">
+        <!--Timeline-->
+        <div class="col-12 col-lg-3">
             <div class="container mb-4">
                 <h2 class="text-primary">Timeline</h2>
                 <div class="d-flex">
@@ -197,6 +166,49 @@
 
             </div>
         </div>
+
+        <!--Scopes-->
+        <div class="col-12 col-lg-6">
+            <div class="container">
+                <h2 class="text-primary">Scopes</h2>
+                <div class="row">
+                    <div class="col-6 border-bottom border-top">
+                        <h5 class="fw-bold pt-2">IN</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="col-6 border-bottom border-top">
+                        <h5 class="fw-bold pt-2">OUT</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Primary-->
+        <div class="col-12 col-lg-3">
+            <div class="container">
+                <h2 class="text-primary">Primary</h2>
+                <div class="d-flex border-top">
+                    <div class="col-lg-2 align-content-center text-center ">
+                        <i class="bi-question-circle-fill"></i>
+                    </div>
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-lg-2 align-content-center text-center ">
+                        <i class="bi-question-circle-fill"></i>
+                    </div>
+                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
