--- a/Assignment 03/project.html
+++ b/Assignment 03/project.html
@@ -21,10 +21,10 @@
 
 
 <div class="container my-4 bg-blue">
-    <div class="row">
+    <div class=" project-container">
         <!--Goals -->
-        <div class="col-12 col-lg-6">
-            <div class="container mb-4">
+        <div class="col-12 ">
+            <div class="container">
                 <h2 class="text-primary">Goals</h2>
                 <div class="d-flex border-bottom border-top">
                     <div class="col-lg-2 align-content-center text-center ">
@@ -60,8 +60,8 @@
         </div>
 
         <!--Team-->
-        <div class="col-12 col-lg-3">
-            <div class="container mb-4">
+        <div class="col-12 ">
+            <div class="container">
                 <h2 class="text-primary">Team</h2>
                 <div class="d-flex border-top">
                     <div class="col-lg-2 align-content-center text-center ">
@@ -99,21 +99,12 @@
                         <p>Name: Nguyễn Văn A</p>
                     </div>
                 </div>
-                <div class="d-flex">
-                    <div class="col-lg-2 align-content-center text-center ">
-                        <i class="fa fa-user"></i>
-                    </div>
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <b>Member 04</b>
-                        <p>Name: Nguyễn Văn A</p>
-                    </div>
-                </div>
             </div>
         </div>
 
         <!--Timeline-->
-        <div class="col-12 col-lg-3">
-            <div class="container mb-4">
+        <div class="col-12  timeLine">
+            <div class="container">
                 <h2 class="text-primary">Timeline</h2>
                 <div class="d-flex">
                     <div class="col-lg-10 pt-2 ps-2 align-content-center">
@@ -139,36 +130,12 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
-                <div class="d-flex">
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <span class="badge bg-secondary">05</span> Project Start
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </div>
-                <div class="d-flex">
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <span class="badge bg-secondary">06</span> Project Start
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </div>
-                <div class="d-flex">
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <span class="badge bg-secondary">07</span> Project Start
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </div>
-                <div class="d-flex">
-                    <div class="col-lg-10 pt-2 ps-2 align-content-center">
-                        <span class="badge bg-secondary">08</span> Project Start
-                        <p>Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </div>
 
             </div>
         </div>
 
         <!--Scopes-->
-        <div class="col-12 col-lg-6">
+        <div class="col-12 ">
             <div class="container">
                 <h2 class="text-primary">Scopes</h2>
                 <div class="row">
@@ -187,7 +154,7 @@
         </div>
 
         <!--Primary-->
-        <div class="col-12 col-lg-3">
+        <div class="col-12 ">
             <div class="container">
                 <h2 class="text-primary">Primary</h2>
                 <div class="d-flex border-top">
