update icon thong tin ca nhan

--- a/Assignment 03/index.html
+++ b/Assignment 03/index.html
@@ -60,6 +60,13 @@
                         <div><b>Email: </b><span id="my-email">vuongnvfx31745@funix.edu.vn</span></div>
                         <div><b>Địa chỉ: </b><span>Hà Nội, Việt Nam</span></div>
                         <div><b>Website: </b><span>https://www.facebook.com/Vuong.Fly/</span></div>
+                        <div class="mt-3">
+                            <i class="mx-2 fa-brands fa-facebook cl-blue-icon"></i>
+                            <i class="mx-2 fa-brands fa-twitter cl-blue-icon"></i>
+                            <i class="mx-2 fa-brands fa-github cl-blue-icon"></i>
+                            <i class="mx-2 fa-brands fa-linkedin cl-blue-icon"></i>
+                            <i class="mx-2 fa-brands fa-google cl-blue-icon"></i>
+                        </div>
                     </div>
                     <div id="input-email-form" class="container .info-input">
                         <form>
